{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 124,
  "lineage": "e168deb5-bf37-9b1a-7e0a-1a222567c77b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "cosmos_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/845af220-bace-45d4-9979-ed5993293ae3/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/cosmos_security_group",
            "location": "centralindia",
            "name": "cosmos_security_group",
            "resource_group_name": "rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Allow-All-Outbound",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-CosmosDB-Inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Name": "Cosmos_Security_Group"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/845af220-bace-45d4-9979-ed5993293ae3/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/strapi-nsg",
            "location": "centralindia",
            "name": "strapi-nsg",
            "resource_group_name": "rg1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/845af220-bace-45d4-9979-ed5993293ae3/resourceGroups/rg1/providers/Microsoft.Network/publicIPAddresses/strapi-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.244.120.197",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "strapi-public-ip",
            "resource_group_name": "rg1",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/845af220-bace-45d4-9979-ed5993293ae3/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/strapi-vnet/subnets/strapi-subnet",
            "name": "strapi-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg1",
            "virtual_network_name": "strapi-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sec-group-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/845af220-bace-45d4-9979-ed5993293ae3/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/strapi-vnet/subnets/strapi-subnet",
            "network_security_group_id": "/subscriptions/845af220-bace-45d4-9979-ed5993293ae3/resourceGroups/rg1/providers/Microsoft.Network/networkSecurityGroups/cosmos_security_group",
            "subnet_id": "/subscriptions/845af220-bace-45d4-9979-ed5993293ae3/resourceGroups/rg1/providers/Microsoft.Network/virtualNetworks/strapi-vnet/subnets/strapi-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.cosmos_sg",
            "azurerm_subnet.subnetA"
          ]
        }
      ]
    }
  ]
}